Add UI and enable functionality Create buttons for the game and re-factor the code to allow to be played with buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>rock paper scissors</title>
 </head>
 <body>
-    
+    <div id="container">
+        <button id="start" class="startGame" onclick="startGame()">Rock, Paper, Scissors, SHOOT!</button>
+        <button id="rock" class="gameChoice">ROCK</button>
+        <button id="paper" class="gameChoice">PAPER</button>
+        <button id="scissors" class="gameChoice">SCISSORS</button>
+    </div>
 </body>
 </html>
