Finish functionality of game Add all required pieces for the game to function Allow game to have a restart button to play again Game updates score when beginning new game

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <button id="scissors" class="gameChoice">SCISSORS</button>
     </div>
     <div id="text-container">
-        <div class="scores">
+
+    <div class="scores">
             <div class="player">
                 <h2 class="playerScore">Player<br>Score</h2>
                 <p class="playerScoreValue">0</p>
@@ -29,6 +30,11 @@
         <h4 class="result">Round Result: </h4>
         <p class="resultText"></p>
         </div>
+    </div>
+    <div id="gameOver" class="gameOver">
+        <h1>GAME OVER</h1>
+        <p id="gameOverText"></p>
+        <button id="restart" class="restart">PLAY AGAIN?</button>
     </div>
 </body>
 </html>
