--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>rock paper scissors</title>
 </head>
 <body>
+    <div class="winsAndLosses" id="winsAndLosses">
+        <div id="wins">Games WON -<p id="winsText">0</p></div>
+        <div id="losses"><p id="lossesText">0</p>- Games LOST</div>
+    </div>
     <div id="container">
         <button id="start" class="startGame">Rock, Paper, Scissors, SHOOT!</button>
         <button id="rock" class="gameChoice">ROCK</button>
@@ -34,6 +38,7 @@
     <div id="gameOver" class="gameOver">
         <h1>GAME OVER</h1>
         <p id="gameOverText"></p>
+        <p id="ties"></p>
         <button id="restart" class="restart">PLAY AGAIN?</button>
     </div>
 </body>
